--- a/LanguageSchoolManagement/LanguageSchoolManagement.csproj
+++ b/LanguageSchoolManagement/LanguageSchoolManagement.csproj
@@ -65,8 +65,8 @@
     <Compile Include="Info.xaml.cs">
       <DependentUpon>Info.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Menu.xaml.cs">
-      <DependentUpon>Menu.xaml</DependentUpon>
+    <Compile Include="Instruction.xaml.cs">
+      <DependentUpon>Instruction.xaml</DependentUpon>
     </Compile>
     <Compile Include="Mistake.xaml.cs">
       <DependentUpon>Mistake.xaml</DependentUpon>
@@ -99,7 +99,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Menu.xaml">
+    <Page Include="Instruction.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
