--- a/LanguageSchoolManagement/LanguageSchoolManagement.csproj
+++ b/LanguageSchoolManagement/LanguageSchoolManagement.csproj
@@ -83,21 +83,9 @@
     <Compile Include="Instruction.xaml.cs">
       <DependentUpon>Instruction.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Mistake.xaml.cs">
-      <DependentUpon>Mistake.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="ReqForm.xaml.cs">
-      <DependentUpon>ReqForm.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Result.xaml.cs">
-      <DependentUpon>Result.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Settings.cs" />
     <Compile Include="SettingsWindow.xaml.cs">
       <DependentUpon>SettingsWindow.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="VerificationWindow.xaml.cs">
-      <DependentUpon>VerificationWindow.xaml</DependentUpon>
     </Compile>
     <Page Include="Info.xaml">
       <SubType>Designer</SubType>
@@ -119,23 +107,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Mistake.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="ReqForm.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Result.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="SettingsWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="VerificationWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -218,6 +190,16 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ILanguageSchoolSaveRead\ILanguageSchoolSaveRead.csproj">
+      <Project>{133bc8be-c485-40ad-a9b1-484d884c8b15}</Project>
+      <Name>ILanguageSchoolSaveRead</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WorkWithExcel\WorkWithExcel.csproj">
+      <Project>{47366d51-6ba1-4bfb-a103-f9b181c81583}</Project>
+      <Name>WorkWithExcel</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
